# OS_labs

lab 1/general_solution/: CMakeLists.txt
lab 1/general_solution/DynamicLibraryUser/: CMakeLists.txt  main.cpp
lab 1/general_solution/StaticLibraryUser/: CMakeLists.txt  main.cpp
lab 1/unix_solution/DynamicLibraryUser/: CMakeLists.txt  main.cpp
lab 1/unix_solution/MyDynamicLibrary/: CMakeLists.txt
lab 1/unix_solution/MyStaticLibrary/: CMakeLists.txt
lab 1/windows_solution/: WindowsLibs.sln
lab 1/windows_solution/DynamicLib/: DynamicLib.vcxproj  DynamicLib.vcxproj.filters  VectorLibrary.cpp  VectorLibrary.h
lab 1/windows_solution/DynamicLibTest/: DynamicLibTest.vcxproj  main.cpp
lab 1/windows_solution/StaticLib/: NumberLibrary.cpp  StaticLib.vcxproj  StaticLib.vcxproj.filters
lab 1/windows_solution/StaticLibTest/: StaticLibTest.vcxproj  main.cpp
lab 1/windows_solution/windows/: README.md
lab2/threads_general/: CMakeLists.txt  main.cpp
lab2/threads_unix/: CMakeLists.txt  main.cpp
lab2/threads_windows/: threads_windows.sln
lab2/threads_windows/threads_windows/: threads_windows.cpp  threads_windows.vcxproj  threads_windows.vcxproj.filters
lab3/: CMakeLists.txt  buffered_channel.h
lab4/linux/: CMakeLists.txt  Killer.cpp  user  user.cpp
lab4/windows/: win_lab_4.sln
lab4/windows/user/: user.cpp  user.vcxproj  user.vcxproj.filters
lab5/lin_lab_5/: CMakeLists.txt  Lab5Linux  ProcessA  ProcessM  ProcessP  ProcessS  main  main.cpp  processA.cpp  processM.cpp  processP.cpp  processS.cpp
lab5/win_lab_5/: win_lab_5.sln
(+166 files in other folders)
